--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
               <finalName>find</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>ru.job4j.searchfiles.Find</mainClass>
+                  <mainClass>ru.Find</mainClass>
                 </transformer>
               </transformers>
             </configuration>
